syntax = "proto3";

package trpc.demo.helloworld;
option go_package="git.code.oa.com/gatesma/demo-go/hello/rpc/hello";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHi (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string msg = 1;
}

message HelloReply {
  string msg = 1;
}